JWT Token complete implementation in Web API .net core 8

--- a/BlogCode.API/appsettings.json
+++ b/BlogCode.API/appsettings.json
@@ -9,5 +9,10 @@
 
   "ConnectionStrings": {
     "BlogCodeConnectionString": "Server=DESKTOP-ON5L6CD; Database= BlogCodeDB; TrustServerCertificate = True; Trusted_Connection=True"
+  },
+  "Jwt": {
+    "Key": "randomwrerewhdfgdfteerter32435GJGj76dfdsfsdGHYT786@#@#97867896JG_LJGJKG5685674687GKHJG78967866666",
+    "Issuer": "https://localhost:7010",
+    "Audience": "https://localhost:4200"
   }
 }
